--- a/getInvolved.html
+++ b/getInvolved.html
@@ -9,6 +9,19 @@
 </head>
 <body>
     <!-- HEADER/NAV -->
+    <header class="container">
+        <nav class="navBar">
+          <a href="index.html">
+          <img class="navImg" src="images/image.png" width="45"alt="cardinalGroup">
+          </a>
+            <ul>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="awareness.html">Awareness</a></li>
+              <li><a href="volunteer.html">Volunteer</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </nav>
+    </header>
     <!-- HEADER/NAV -->
 
     <!-- header -->
