--- a/getInvolved.html
+++ b/getInvolved.html
@@ -17,7 +17,7 @@
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="awareness.html">Awareness</a></li>
-              <li><a href="volunteer.html">Volunteer</a></li>
+              <li><a href="volunteer.html">Get Involved</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </nav>
