adjusted nav bar on the home

--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Home</title>
 </head>
 <body class="home">
-  <header class="headerContainer">
-        <main class="mainContainer">
+    <header id="header" class="container">
+        <nav class="navBar">
+          <ul>
+                <li>
+                    <a href="index.html">
+                        <img class="navImg" src="images/image.png" width="45"alt="cardinalGroup">
+                        </a>
+                </li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="awareness.html">Awareness</a></li>
+              <li><a href="volunteer.html">Get Involved</a></li>
+              <li><a href="contact.html" class="contactButton">Contact Us</a></li>
+            </ul>
+          </nav>
+    </header>
+    <main class="mainContainer">
             <img src="Images/logoWhite.png" alt="Logo">
         </main>
-
-    </header>
-
     <section class="aboutUsHome">
         <h2>About us</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente necessitatibus itaque autem, cumque porro
