--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       <ul>
             <li>
                 <a href="index.html">
-                    <img class="navImg" src="images/image.png" width="45"alt="cardinalGroup">
+                    <img class="navImg" src="image.png" width="45"alt="cardinalGroup">
                     </a>
             </li>
           <li><a href="about.html">About Us</a></li>
