--- a/getInvolved.html
+++ b/getInvolved.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
+    <script src="https://kit.fontawesome.com/a7222c8d7f.js" crossorigin="anonymous"></script>
     <title>Get Involved</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
                 </li>
               <li><a href="about.html">About Us</a></li>
               <li><a href="awareness.html">Awareness</a></li>
-              <li><a href="volunteer.html">Get Involved</a></li>
+              <li><a href="getInvolved.html">Get Involved</a></li>
               <li><a href="contact.html" class="contactButton">Contact Us</a></li>
             </ul>
           </nav>
@@ -61,6 +62,17 @@
     <!-- page content -->
 
     <!-- footer -->
+    <footer id="footer">
+        <section>
+            <h4>Get in Touch</h4>
+            <span><a href="contactUs.html">Click Here</a></span>
+        </section>
+        <ul>
+            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+        </ul>
+    </footer>
     <!-- footer -->
 </body>
 </html>
