--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
             </ul>
           </nav>
     </header>
+
+    <div class="headerContainer">
+
     <main class="mainContainer">
             <img src="Images/logoWhite.png" alt="Logo">
         </main>
+    </div>
     <section class="aboutUsHome">
         <h2>About us</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente necessitatibus itaque autem, cumque porro
