Dante change about page layout

--- a/about.html
+++ b/about.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <title>Cardinal Group</title>
 </head>
-<bo<header id="header" class="container">
+<body>
+<header id="header" class="container">
     <nav class="navBar">
       <ul>
             <li>
                 <a href="index.html">
-                    <img class="navImg" src="image.png" width="45"alt="cardinalGroup">
+                    <img class="navImg" src="/code4justiceimages/image.png" width="45"alt="cardinalGroup">
                     </a>
             </li>
           <li><a href="about.html">About Us</a></li>
@@ -23,17 +24,25 @@
       </nav>
 </header>
 
-<section class="summary">
+<section class="aboutUs">
+    <img src="/images/non-profit1.webp" alt="">
     <h1>About US</h1>
-        <p>Cardinal Group is a non-profit organization that stands against all forms of human trafficking. <br> We started the group in 2022 to bring awareness to the different types of human trafficking, while also informing the public what they can do to help prevent human trafficking</p>
+        <p>Cardinal Group is a non-profit organization that stands against all forms of human trafficking. <br> The group was founded in 2022 to bring awareness to the different types of human trafficking, while also informing the public what they can do to help prevent human trafficking</p>
 </section>
+<div class="contentSection">
+    <section class="ourMission">
+        <h1>Our Mission</h1>
+            <p>Bringing awareness to modern day slavery in the many forms of human trafficking, while providing resources to rehabilitate victims. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, exercitationem!</p>
+    </section>
 
-
-
-
-
-
-
-
+    <section class="values">
+        <h1>Cardinal Group Values</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, provident facere ex omnis at esse necessitatibus voluptate, quasi, laborum odio nulla veniam porro cumque voluptas sunt perspiciatis labore sapiente velit.</p>
+    </section>
+    <section class="goals">
+        <h1>Cardinal Group Goals</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto quasi doloribus odit corrupti tempora. Asperiores facere similique ipsum dicta consequatur deserunt iste enim hic, nam rem laudantium ducimus nostrum temporibus.</p>
+    </section>
+</div>
 </body>
 </html>
