--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/assets/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Marcellus&display=swap">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Home</title>
-</head>
-
-<body>
-
+  </head>
+  <body class="home">
     <header id="header" class="container">
-        <nav class="navBar">
-            <ul>
-                <li>
-                    <a href="index.html">
-                        <img class="navImg" src="Images/Logo|.png" width="45" alt="cardinalGroup">
-                    </a>
-                </li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="awareness.html">Awareness</a></li>
-              <li><a href="getInvolved.html">Get Involved</a></li>
-              <li><a href="contact.html" class="contactButton">Contact Us</a></li>
-
-            </ul>
-        </nav>
+      <nav class="navBar">
+        <ul>
+          <li>
+            <a href="index.html">
+              <img
+                class="navImg"
+                src="images/image.png"
+                width="45"
+                alt="cardinalGroup"
+              />
+            </a>
+          </li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="awareness.html">Awareness</a></li>
+          <li><a href="getInvolved.html">Get Involved</a></li>
+          <li><a href="contact.html" class="contactButton">Contact Us</a></li>
+        </ul>
+      </nav>
     </header>
 
 
@@ -79,6 +78,27 @@
                     fugit deleniti!</p>
             </article>
         </div>
+        <div class="rLinks middleSection">
+          <img src="Images/volunteer.jpeg" alt="Volunteer" />
+          <h3>Volunteer</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
+            distinctio blanditiis cum, obcaecati laudantium illo, laborum
+            libero, labore fugit animi autem. Velit fugit nihil ipsum aliquam
+            optio aspernatur incidunt tenetur.
+          </p>
+        </div>
+        <div class="rLinks">
+          <img src="Images/contact.jpeg" alt="Get In Touch" />
+          <h3>Get in Touch</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit quasi
+            id veritatis repellat tenetur quia aperiam explicabo hic. Placeat
+            nostrum alias est ex quae laboriosam corporis blanditiis modi fugit
+            deleniti!
+          </p>
+        </div>
+      </div>
     </section>
 
 
