abe check your html for comment

--- a/index.html
+++ b/index.html
@@ -7,30 +7,32 @@
     <link rel="stylesheet" href="assets/style.css" />
     <title>Home</title>
   </head>
+
+<!-- ABE I ADJUSTED YOUR IMG IN THE ABOUT SECTION, WORK ON YOUR BOTTOM 3 SECTIONS AND MAKING THEM EVEN. WORK WITH INDY ON THE FOOTER -->
+
   <body class="home">
+    <!-- HEADER/NAV -->
     <header id="header" class="container">
-      <nav class="navBar">
-        <ul>
-          <li>
-            <a href="index.html">
-              <img
-                class="navImg"
-                src="images/image.png"
-                width="45"
-                alt="cardinalGroup"
-              />
-            </a>
-          </li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="awareness.html">Awareness</a></li>
-          <li><a href="getInvolved.html">Get Involved</a></li>
-          <li><a href="contact.html" class="contactButton">Contact Us</a></li>
-        </ul>
-      </nav>
-    </header>
-
-
-
+        <nav class="navBar">
+          <ul>
+            <li>
+              <a href="index.html">
+                <img
+                  class="navImg"
+                  src="images/image.png"
+                  width="45"
+                  alt="cardinalGroup"
+                />
+              </a>
+            </li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="awareness.html">Awareness</a></li>
+            <li><a href="getInvolved.html">Get Involved</a></li>
+            <li><a href="contactUs.html" class="contactButton">Contact Us</a></li>
+          </ul>
+        </nav>
+      </header>
+      <!-- HEADER/NAV -->
 
     <main class="headerContainer">
         <section class="mainContainer">
@@ -77,28 +79,6 @@
                     quia aperiam explicabo hic. Placeat nostrum alias est ex quae laboriosam corporis blanditiis modi
                     fugit deleniti!</p>
             </article>
-        </div>
-        <div class="rLinks middleSection">
-          <img src="Images/volunteer.jpeg" alt="Volunteer" />
-          <h3>Volunteer</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-            distinctio blanditiis cum, obcaecati laudantium illo, laborum
-            libero, labore fugit animi autem. Velit fugit nihil ipsum aliquam
-            optio aspernatur incidunt tenetur.
-          </p>
-        </div>
-        <div class="rLinks">
-          <img src="Images/contact.jpeg" alt="Get In Touch" />
-          <h3>Get in Touch</h3>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit quasi
-            id veritatis repellat tenetur quia aperiam explicabo hic. Placeat
-            nostrum alias est ex quae laboriosam corporis blanditiis modi fugit
-            deleniti!
-          </p>
-        </div>
-      </div>
     </section>
 
 
