--- a/getInvolved.html
+++ b/getInvolved.html
@@ -29,7 +29,7 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="awareness.html">Awareness</a></li>
           <li><a href="getInvolved.html">Get Involved</a></li>
-          <li><a href="contact.html" class="contactButton">Contact Us</a></li>
+          <li><a href="contactUs.html" class="contactButton">Contact Us</a></li>
         </ul>
       </nav>
     </header>
@@ -39,7 +39,11 @@
     <main id="giWrapper">
       <section class="mainSection">
         <h1>Get Involved</h1>
-        <p class="giPara">Opportunities to help in your community.</p>
+        <p class="giPara">
+          No matter where we are in the world, we each have a responsibility
+          towards all people, especially in keeping them safe from exploitation
+          and abuse.
+        </p>
       </section>
     </main>
     <!-- header -->
@@ -67,9 +71,9 @@
           class="sectionImg"
         />
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus minus
-          sapiente non dicta ut officiis consectetur, nam dolore dolor! Quia
-          illo libero dolores ratione vitae.
+          Our supporters continue to inspire us with the ways they're raising
+          funds to end human trafficking and connect survivors to resources they
+          need.
         </p>
       </section>
       <section class="otherTwo">
@@ -81,9 +85,9 @@
           class="sectionImg"
         />
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus minus
-          sapiente non dicta ut officiis consectetur, nam dolore dolor! Quia
-          illo libero dolores ratione vitae.
+          The generosity of people like you is what enables us to support
+          survivors and their communities through their whole journey. Click
+          here to make a donation today.
         </p>
 
         <a href="contactUs.html" class="donateButton">Donate</a>
@@ -92,32 +96,29 @@
     <!-- page content -->
 
     <!-- footer -->
-    <footer id="footer" class="container">
-      <nav class="footerNavBar">
-        <ul>
+    <footer class="footerContainer">
+      <div class="footerContent">
+        <a href="#">
+          <img src="Images/Logo|white.png" alt="Logo" />
+        </a>
+        <ul class="socialLinks">
           <li>
-            <a href="index.html">
-              <img
-                class="navImg"
-                src="images/image.png"
-                width="45"
-                alt="cardinalGroup"
-              />
-            </a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
           </li>
-          <li>Get in Touch</li>
-          <li><a href="contact.html" class="contactButton">Contact Us</a></li>
-          <li class="footerSocials">
-            <a href="getInvolved.html">Get Involved</a>
+          <li>
+            <a href="#"><i class="fa fa-twitter"></i></a>
           </li>
-          <li class="footerSocials">
-            <a href="getInvolved.html">Get Involved</a>
+          <li>
+            <a href="#"><i class="fa fa-linkedin-square"></i></a>
           </li>
-          <li class="footerSocials">
-            <a href="getInvolved.html">Get Involved</a>
+          <li>
+            <a href="#"><i class="fa fa-instagram"></i></a>
           </li>
         </ul>
-      </nav>
+      </div>
+      <div class="btmFooter">
+        <p>copyright &copy; 2023 Cardinal Group Inc. designed by J.I.M.D.A</p>
+      </div>
     </footer>
     <!-- footer -->
   </body>
