--- a/contactUs.html
+++ b/contactUs.html
@@ -9,21 +9,28 @@
     <title>Connect with Us!</title>
 </head>
 
-<header id="header" class="container">
-    <nav class="navBar">
-      <ul>
+    <!-- HEADER/NAV -->
+    <header id="header" class="container">
+        <nav class="navBar">
+          <ul>
             <li>
-                <a href="index.html">
-                    <img class="navImg" src="images/image.png" width="45"alt="cardinalGroup">
-                    </a>
+              <a href="index.html">
+                <img
+                  class="navImg"
+                  src="images/image.png"
+                  width="45"
+                  alt="cardinalGroup"
+                />
+              </a>
             </li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="awareness.html">Awareness</a></li>
-          <li><a href="volunteer.html">Get Involved</a></li>
-          <li><a href="contact.html" class="contactButton">Contact Us</a></li>
-        </ul>
-      </nav>
-</header>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="awareness.html">Awareness</a></li>
+            <li><a href="getInvolved.html">Get Involved</a></li>
+            <li><a href="contactUs.html" class="contactButton">Contact Us</a></li>
+          </ul>
+        </nav>
+      </header>
+      <!-- HEADER/NAV -->
 
 <body>
     
