--- a/index.html
+++ b/index.html
@@ -1,45 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Home</title>
-  </head>
+</head>
 
-<!-- ABE I ADJUSTED YOUR IMG IN THE ABOUT SECTION, WORK ON YOUR BOTTOM 3 SECTIONS AND MAKING THEM EVEN. WORK WITH INDY ON THE FOOTER -->
-
-  <body class="home">
+<body class="home">
     <!-- HEADER/NAV -->
     <header id="header" class="container">
         <nav class="navBar">
-          <ul>
-            <li>
-              <a href="index.html">
-                <img
-                  class="navImg"
-                  src="images/image.png"
-                  width="45"
-                  alt="cardinalGroup"
-                />
-              </a>
-            </li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="awareness.html">Awareness</a></li>
-            <li><a href="getInvolved.html">Get Involved</a></li>
-            <li><a href="contactUs.html" class="contactButton">Contact Us</a></li>
-          </ul>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        <img class="navImg" src="images/image.png" width="45" alt="cardinalGroup" />
+                    </a>
+                </li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="awareness.html">Awareness</a></li>
+                <li><a href="getInvolved.html">Get Involved</a></li>
+                <li><a href="contactUs.html" class="contactButton">Contact Us</a></li>
+            </ul>
         </nav>
-      </header>
-      <!-- HEADER/NAV -->
+    </header>
 
     <main class="headerContainer">
         <section class="mainContainer">
             <img src="Images/logoWhite.png" alt="Logo">
         </section>
     </main>
-    <!-- about section not finished yet  -->
+
+
+    <!-- MAKE ABOUT CONTAINER SMALLER -->
+
+
     <section class="aboutUsHome">
         <img src="Images/aboutHome.avif" alt="Help">
         <h2>About us</h2>
@@ -51,11 +49,17 @@
 
     </section>
 
+
+
+    <!-- R LINKS SECTION SMALLER -->
+
+
+
     <section class="resourcesHome">
 
         <h2>Resources</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed at tenetur nulla quas, nobis fugit quaerat
-            aliquid officia.</p>
+        <p>Here are some helpful resources to help you get involved into out organization, if you have any questions
+            please contact us. </p>
         <div class="resourcesItems">
             <article class="rLinks">
                 <img src="Images/awareness.avif" alt="Awareness">
@@ -93,8 +97,6 @@
                 <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
             </ul>
-        </div>
-        <div class="btmFooter">
             <p>copyright &copy; 2023 Cardinal Group Inc. designed by J.I.M.D.A</p>
         </div>
     </footer>
