Indy first contact page push

--- a/contactUs.html
+++ b/contactUs.html
@@ -27,6 +27,20 @@
     </nav>
 </header>
 
+<body class="bodyContact">
+
+    <main class="titleContact"> 
+
+         <h1>Connect with Us!</h1>
+
+         <p>We would love to help with your inquiry and/or any feedback that you would like to give Cardinal Group. <br>
+           You can also send any inquiries about volunteer and/or fundraising opportunities through this form. As we are seeing <br>
+           an influx in support please allow a member from our team at least 3-5 business days to respond to any correspondence. <br>
+           Please leave a valid method for one of our members to reach out to your request. <br>
+           Thank you for reaching out to Cardinal Group. </p>
+               
+        </main>
+    
 
 <body class="bodyContact">
 
@@ -51,9 +65,8 @@
     <section class="container">
         <form action="action_page.php">
 
-
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your first name...">
+         <label for="fname">First Name</label>
+         <input type="text" id="fname" name="firstname" placeholder="Your first name...">
 
             <label for="lname">Last Name</label>
             <input type="text" id="lname" name="lastname" placeholder="Your last name...">
@@ -73,29 +86,22 @@
     </section>
 
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-text-col">
-            <h2 class="footer__title">
-                Check us out on Social Media!
-            </h2>
+     <!-- Footer -->
+   <footer class="footerContainer">
+        <div class="footerContent">
+            <a href="#">
+                <img src="images/logoWhite.png" alt="Logo">
+            </a>
+            <ul class="socialLinks">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+            </ul>
         </div>
-        <ul class="footer-list">
-            <li class="footer-item">
-                <a href="https://www.instagram.com">
-                    <i class="fa fa-instagram" alt="instagram"> </i>
-            </li>
-            <li class="footer-item">
-                <a href="https://www.facebook.com">
-                    <i class="fa fa-facebook-square" alt="facebook"></i>
-                </a>
-            </li>
-            <li class="footer-item">
-                <a href="https://www.squareup.com">
-                    <i class="fa fa-twitter-square" alt="square"></i>
-                </a>
-            </li>
-        </ul>
+        <div class="btmFooter">
+            <p>copyright &copy; 2023 Cardinal Group Inc. designed by J.I.M.D.A</p>
+        </div>
     </footer>
 
 </body>
