Home Abe i need to finish the about page lol

--- a/index.html
+++ b/index.html
@@ -46,42 +46,40 @@
             exercitationem suscipit dignissimos facere neque? Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Esse libero sapiente temporibus tenetur cumque! Dicta quia praesentium odit autem vitae. Fugit perspiciatis
             beatae veritatis facere quidem, culpa necessitatibus rem natus!</p>
-
     </section>
-
-
-
-    <!-- R LINKS SECTION SMALLER -->
-
 
 
     <section class="resourcesHome">
 
         <h2>Resources</h2>
-        <p>Here are some helpful resources to help you get involved into out organization, if you have any questions
-            please contact us. </p>
+        <p class="resourcesInfo">Here are some helpful resources to help you get involved into out organization. Please
+            navigate
+            throughout our whole website to get the best information on our organization</p>
         <div class="resourcesItems">
             <article class="rLinks">
                 <img src="Images/awareness.avif" alt="Awareness">
                 <h3>Awareness</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit nisi aliquam, quae
-                    consectetur eum officiis cupiditate, possimus earum mollitia quo commodi adipisci dolorum ad
-                    repellat non recusandae natus nihil. Harum!</p>
+                <p>Visit our Awareness page to get more information on how human trafficking is still huge
+                    epidemic around the world. How humans from around the world are losing
+                    their freedom for profit. </p>
+                <a href="awareness.html" class="buttonHome"> learn more</a>
 
             </article>
             <article class="rLinks">
                 <img src="Images/volunteer.avif" alt="Volunteer">
                 <h3>Volunteer</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut distinctio blanditiis cum, obcaecati
-                    laudantium illo, laborum libero, labore fugit animi autem. Velit fugit nihil ipsum aliquam optio
-                    aspernatur incidunt tenetur.</p>
+                <p>Please visit our page on how to "Get Involved" to know more information on what
+                    we do to help spread awareness on human trafficking and you can also help to bring
+                    peace and freedom to everyhuman </p>
+                <a href="awareness.html" class="buttonHome"> learn more </a>
             </article>
             <article class="rLinks">
                 <img src="Images/contact.avif" alt="Get In Touch">
                 <h3>Get in Touch</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit quasi id veritatis repellat tenetur
-                    quia aperiam explicabo hic. Placeat nostrum alias est ex quae laboriosam corporis blanditiis modi
-                    fugit deleniti!</p>
+                <p>If you have any questions or concerns please visit our contact page to send your question or comment
+                    to our organization. This is not for emergency services contact your local authorities for
+                    emergencies</p>
+                <a href="awareness.html" class="buttonHome"> learn more </a>
             </article>
     </section>
 
