--- a/contactUs.html
+++ b/contactUs.html
@@ -80,15 +80,11 @@
             <label for="subject">Subject</label>
             <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-<<<<<<< Updated upstream
-            <input type="submit" value="Submit">
-=======
          <label for="subject">Subject</label>
          <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
      
          <input type="submit" value="Submit" class="submitButton">
->>>>>>> Stashed changes
-
+          <span class="thankYou"></span>
         </form>
     </section>
 
@@ -110,7 +106,7 @@
             <p>copyright &copy; 2023 Cardinal Group Inc. designed by J.I.M.D.A</p>
         </div>
     </footer>
-
+<script src="assets/main.js"></script>
 </body>
 
 </html>
