--- a/getInvolved.html
+++ b/getInvolved.html
@@ -40,7 +40,7 @@
       <section class="mainSection">
         <h1>Get Involved</h1>
         <p class="giPara">
-          No matter where we are in the world, we each have a responsibility
+          No matter where we are in the world, we each have a responsibility<br />
           towards all people, especially in keeping them safe from exploitation
           and abuse.
         </p>
@@ -58,9 +58,9 @@
           class="sectionImg"
         />
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus minus
-          sapiente non dicta ut officiis consectetur, nam dolore dolor! Quia
-          illo libero dolores ratione vitae.
+          You've taken the first step in creating a world of dignity and
+          freedom! Your efforts and contributions will all go towards the
+          movement to end exploitation everywhere.
         </p>
       </section>
       <section class="middleSection">
@@ -115,8 +115,6 @@
             <a href="#"><i class="fa fa-instagram"></i></a>
           </li>
         </ul>
-      </div>
-      <div class="btmFooter">
         <p>copyright &copy; 2023 Cardinal Group Inc. designed by J.I.M.D.A</p>
       </div>
     </footer>
