--- a/getInvolved.html
+++ b/getInvolved.html
@@ -99,7 +99,7 @@
     <footer class="footerContainer">
       <div class="footerContent">
         <a href="#">
-          <img src="Images/Logo|white.png" alt="Logo" />
+          <img src="images/image-1.png" alt="Logo">
         </a>
         <ul class="socialLinks">
           <li>
