--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <footer class="footerContainer">
         <div class="footerContent">
             <a href="#">
-                <img src="Images/Logo|white.png" alt="Logo">
+                <img src="images/image-1.png" alt="Logo">
             </a>
             <ul class="socialLinks">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
