PM Josh making final edits one more review before pushing to main

--- a/about.html
+++ b/about.html
@@ -4,36 +4,81 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Cardinal Group</title>
 </head>
-<bo<header id="header" class="container">
+<body class="aboutBody">
+  <header id="header" class="container">
     <nav class="navBar">
-      <ul>
+        <ul>
             <li>
                 <a href="index.html">
-                    <img class="navImg" src="image.png" width="45"alt="cardinalGroup">
-                    </a>
+                    <img class="navImg" src="images/image.png" width="45" alt="cardinalGroup" />
+                </a>
             </li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="awareness.html">Awareness</a></li>
-          <li><a href="volunteer.html">Get Involved</a></li>
-          <li><a href="contact.html" class="contactButton">Contact Us</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="awareness.html">Awareness</a></li>
+            <li><a href="getInvolved.html">Get Involved</a></li>
+            <li><a href="contactUs.html" class="contactButton">Contact Us</a></li>
+            
         </ul>
-      </nav>
+    </nav>
+    <div class="progress-bar" id="myBar"></div>
 </header>
 
-<section class="summary">
+<section class="aboutUs">
     <h1>About US</h1>
-        <p>Cardinal Group is a non-profit organization that stands against all forms of human trafficking. <br> We started the group in 2022 to bring awareness to the different types of human trafficking, while also informing the public what they can do to help prevent human trafficking</p>
+        <p>Cardinal Group is a non-profit organization that stands against all forms of human trafficking. <br> The group was founded in 2022 to bring awareness to the different types of human trafficking, while also informing the public what they can do to help prevent human trafficking</p>
+</section>
+<div class="contentSection">
+    <section class="ourMission">
+        <img src="https://i.postimg.cc/sgsnNRS9/pexels-cottonbro-4761685.jpg" alt="">
+        <h2> Our Mission </h2>
+            <p>Bringing awareness to modern day slavery in the many forms of human trafficking, while providing resources to rehabilitate victims. We fight human trafficking through prevention, intervention, and aftercare work.</p>
+    </section>
+
+    <section class="values">
+        <img src="https://i.postimg.cc/L4Q05Wcm/non-profit2.jpg" alt="">
+        <h2>Our Values</h2>
+        <p>Integrity<br>Accountability<br>Passion<br>Humility<br>Unity<br>Agility<br></p>
+    </section>
+    <section class="vision">
+        <img src="https://i.postimg.cc/dt7NyBFr/non-profit3.jpg" alt="">
+        <h2>Our Vision</h2>
+        <p>To strive for a world that is free from all forms of human-trafficking, whether it's sex trafficking, labor trafficking, or domestic servitude.</p>
+    </section>
+</div>
+
+<section class="meetUs">
+  <h3> Meet the Team</h3>
+  <ul>
+    <li>Josh Sease <br><span>Project Manager</span></li>
+    <li>India Horton <br><span>Public Relations</li>
+    <li>Micah Norrington <br><span>Team Lead</li>
+    <li>Dante Huggins <br><span>Business Relations Manager</li>
+    <li>Abraham Varguez <br><span>Marketing Manager</li>
+  </ul>
 </section>
 
 
 
-
-
-
-
-
+<footer class="aboutfooterContainer">
+    <div class="aboutfooterContent">
+        <a href="#">
+            <img src="images/image.png" width="45" alt="cardinalGroup">
+        </a>
+        <ul class="aboutsocialLinks">
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+        </ul>
+    </div>
+    <div class="aboutbtmFooter">
+        <p>copyright &copy; 2023 Cardinal Group Inc. designed by J.I.M.D.A</p>
+    </div>
+</footer>
+<script src="assets/main.js"></script>
 </body>
 </html>
