--- a/getInvolved.html
+++ b/getInvolved.html
@@ -15,24 +15,21 @@
     <!-- HEADER/NAV -->
     <header id="header" class="container">
       <nav class="navBar">
-        <ul>
-          <li>
-            <a href="index.html">
-              <img
-                class="navImg"
-                src="images/image.png"
-                width="45"
-                alt="cardinalGroup"
-              />
-            </a>
-          </li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="awareness.html">Awareness</a></li>
-          <li><a href="getInvolved.html">Get Involved</a></li>
-          <li><a href="contactUs.html" class="contactButton">Contact Us</a></li>
-        </ul>
+          <ul>
+              <li>
+                  <a href="index.html">
+                      <img class="navImg" src="images/image.png" width="45" alt="cardinalGroup" />
+                  </a>
+              </li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="awareness.html">Awareness</a></li>
+              <li><a href="getInvolved.html">Get Involved</a></li>
+              <li><a href="contactUs.html" class="contactButton">Contact Us</a></li>
+              
+          </ul>
       </nav>
-    </header>
+      <div class="progress-bar" id="myBar"></div>
+  </header>
     <!-- HEADER/NAV -->
 
     <!-- header -->
@@ -119,5 +116,6 @@
       </div>
     </footer>
     <!-- footer -->
+    <script src="assets/main.js"></script>
   </body>
 </html>
