--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 
             </ul>
         </nav>
+        <div class="progress-bar" id="myBar"></div>
     </header>
 
     <main class="headerContainer">
@@ -100,7 +101,7 @@
         </div>
     </footer>
 
-
+<script src="assets/main.js"></script>
 </body>
 
 </html>
