adjust awareness and contact

--- a/contactUs.html
+++ b/contactUs.html
@@ -38,9 +38,9 @@
             <br>
             You can also send any inquiries about volunteer or fundraising opportunities through this form. As
                 we are seeing <br>
-                an influx in support please allow a member from our team at least 3-5 business days to respond to
+                an influx in support please allow a member from our team at least 24-48 business hours to respond to
                 any correspondence. <br>
-                Please leave a valid method for one of our members to reach out to your request. <br>
+               
                 Thank you for reaching out to Cardinal Group.
         </p>
     </main>
